fabric/testdata/out/ing_setanta-category-gatekeeper-default-404-route.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    metacontroller.k8s.io/last-applied-configuration: '{"apiVersion":"extensions/v1beta1","kind":"Ingress","metadata":{"annotations":{"zalando.org/aws-load-balancer-ssl-policy":"ELBSecurityPolicy-FS-2018-06","zalando.org/skipper-routes":"PathSubtree(\"/\")
      -\u003e oauthTokeninfoAllScope(\"uid\") -\u003e unverifiedAuditLog(\"sub\")
      -\u003e status(404) -\u003e inlineContent(\"{\\\"title\\\":\\\"Gateway Rejected\\\",\\\"status\\\":404,\\\"detail\\\":\\\"Gateway
      Route Not Matched\\\"}\") -\u003e \u003cshunt\u003e"},"labels":{"application":"setanta-category-gatekeeper","controller-uid":"a33746cf-7888-46c2-8dc9-60c003d3127f","deployment-id":"d-2azdig4sinn5uusgktqsvf288n","pipeline-id":"l-2nk7f9gw2i2t6hkqdv6j3v97ve"},"name":"setanta-category-gatekeeper-default-404-route","namespace":"default"},"spec":{"rules":[{"host":"category-gatekeeper.smart-product-platform-test.zalan.do","http":{"paths":[{"backend":{"serviceName":"setanta-category-gatekeeper","s [...]
    zalando.org/aws-load-balancer-ssl-policy: ELBSecurityPolicy-FS-2018-06
    zalando.org/skipper-routes: PathSubtree("/") -> oauthTokeninfoAllScope("uid")
      -> unverifiedAuditLog("sub") -> status(404) -> inlineContent("{\"title\":\"Gateway
      Rejected\",\"status\":404,\"detail\":\"Gateway Route Not Matched\"}") -> <shunt>
  creationTimestamp: "2021-10-05T10:19:11Z"
  generation: 1
  labels:
    application: setanta-category-gatekeeper
    controller-uid: a33746cf-7888-46c2-8dc9-60c003d3127f
    deployment-id: d-2azdig4sinn5uusgktqsvf288n
    pipeline-id: l-2nk7f9gw2i2t6hkqdv6j3v97ve
  name: setanta-category-gatekeeper-default-404-route
  namespace: default
  ownerReferences:
  - apiVersion: zalando.org/v1
    blockOwnerDeletion: true
    controller: true
    kind: FabricGateway
    name: setanta-category-gatekeeper
    uid: a33746cf-7888-46c2-8dc9-60c003d3127f
  resourceVersion: "1380106418"
  uid: 1da863e1-1b8a-452a-8dd3-2920352d6907
spec:
  rules:
  - host: category-gatekeeper.smart-product-platform-test.zalan.do
    http:
      paths:
      - backend:
          service:
            name: setanta-category-gatekeeper
            port:
              name: api-port
        pathType: ImplementationSpecific
  - host: spp-category-gatekeeper-test.zalandoapis.com
    http:
      paths:
      - backend:
          service:
            name: setanta-category-gatekeeper
            port:
              name: api-port
        pathType: ImplementationSpecific
status:
  loadBalancer:
    ingress:
    - hostname: kube-ing-lb-vejw9uwox1cj-898356825914b821.elb.eu-central-1.amazonaws.com
